--- a/QAthleticsWebRep/Pages/UserPages/Competitions.razor
+++ b/QAthleticsWebRep/Pages/UserPages/Competitions.razor
@@ -136,14 +136,23 @@
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th>Class</th>
+                            @if(SelectedClassFilter == "All")
+                            {
+                                <th>Class</th>
+                            }
                             <th>Event</th>
                             <th>Game Group</th>
                             <th>Game Stage</th>
                             <th>Status</th>
-                            <th>Game Date</th>
+                            @if (SelectedGameDateFilter == "All")
+                            {
+                                <th>Game Date</th>
+                            }
                             <th>Begin Time</th>
-                            <th>Race Measure</th>
+                            @if (SelectedRaceMeasureFilter == "All")
+                            {
+                                <th>Race Measure</th>
+                            }
                             <th>Race Team</th>
                             <th>Download Start List</th>
                             <th>Command Result</th>
@@ -157,14 +166,23 @@
                         @foreach (var eventItem in FilteredEventsList)
                         {
                             <tr>
-                                <td>@eventItem.Class</td>
+                                @if (SelectedClassFilter == "All")
+                                {
+                                    <td>@eventItem.Class</td>
+                                }
                                 <td>@eventItem.Event</td>
                                 <td>@eventItem.GameGroup</td>
                                 <td>@eventItem.GameStage</td>
                                 <td>@eventItem.Status</td>
-                                <td>@eventItem.GameDate</td>
+                                @if (SelectedGameDateFilter == "All")
+                                {
+                                    <td>@eventItem.GameDate</td>
+                                }
                                 <td>@eventItem.BeginTime</td>
-                                <td>@eventItem.RaceMeasure</td>
+                                @if (SelectedRaceMeasureFilter == "All")
+                                {
+                                    <td>@eventItem.RaceMeasure</td>
+                                }
                                 <td>@eventItem.RaceTeam</td>
                                 <td>
                                     @if(eventItem.DownloadStartList != null && eventItem.DownloadStartList != "")
